Update supported versions to 1.15-1.17.1